added collecting of server usage statistical data for each download: number of successful and failed article downloads per news server; new page in history dialog shows collected statistics; new fields in RPC-method "history": ServerStats (array), TotalArticles, SuccessArticles, FailedArticles; new env. vars passed to pp-scripts: NZBPP_TOTALARTICLES, NZBPP_SUCCESSARTICLES, NZBPP_FAILEDARTICLES and per used news server: NZBPP_SERVERX_SUCCESSARTICLES, NZBPP_SERVERX_FAILEDARTICLES; also new env.vars: DELETED, HEALTHDELETED
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@794 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1295,7 +1295,17 @@ SevenZipCmd=7z
 #                       0 = unpack is disabled or was skipped due to nzb-file
 #                           parameters or due to errors during par-check;
 #                       1 = unpack failed;
-#                       2 = unpack successful.
+#                       2 = unpack successful;
+#  NZBPP_DELETED      - indicates if nzb-file was deleted from queue (1);
+#  NZBPP_HEALTHDELETED - indicates if nzb-file was deleted by health
+#                       check (1); the parameter NZBPP_DELETED is also set to 1;
+#  NZBPP_TOTALARTICLES - number of articles in nzb-file;
+#  NZBPP_SUCCESSARTICLES - number of successfully downloaded articles;
+#  NZBPP_FAILEDARTICLES - number of failed articles;
+#  NZBPP_SERVERX_SUCCESSARTICLES - number of successfully downloaded
+#                       articles from ServerX (X is replaced with server
+#                       number, for example NZBPP_SERVER1_SUCCESSARTICLES);
+#  NZBPP_SERVERX_FAILEDARTICLES - number of failed articles from ServerX.
 #
 # If the script defines own options they are also passed as environment
 # variables. These variables have prefix "NZBPO_" in their names. For
