added new option "ApprovedIP" to set the list of IP-addresses which may connect without authorization
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@795 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -268,6 +268,19 @@ SecureCert=
 # Full path to key file for encrypted communication.
 SecureKey=
 
+# IP-addresses allowed to connect without authorization.
+#
+# Comma separated list of privileged IPs for easy access to NZBGet
+# built-in web-server (web-interface and RPC).
+#
+# Example: 127.0.0.1,192.168.178.2
+#
+# NOTE: Do not put the address of your router here or this may open
+# a password free access to the program from the Internet.
+# NOTE: Do not use this option if the program works behind another
+# web-server because all requests will have the (same) address of
+# this server.
+ApprovedIP=
 
 ##############################################################################
 ### PERMISSIONS                                                            ###
