--- a/nzbget.conf
+++ b/nzbget.conf
@@ -275,11 +275,8 @@ SecureKey=
 #
 # Example: 127.0.0.1,192.168.178.2
 #
-# NOTE: Do not put the address of your router here or this may open
-# a password free access to the program from the Internet.
 # NOTE: Do not use this option if the program works behind another
-# web-server because all requests will have the (same) address of
-# this server.
+# web-server because all requests will have the address of this server.
 ApprovedIP=
 
 ##############################################################################
