addition to r795: renamed option "ApprovedIP" to "AuthorizedIP"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@799 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -273,11 +273,11 @@ SecureKey=
 # Comma separated list of privileged IPs for easy access to NZBGet
 # built-in web-server (web-interface and RPC).
 #
-# Example: 127.0.0.1,192.168.178.2
+# Example: 127.0.0.1,192.168.178.2.
 #
 # NOTE: Do not use this option if the program works behind another
 # web-server because all requests will have the address of this server.
-ApprovedIP=
+AuthorizedIP=
 
 ##############################################################################
 ### PERMISSIONS                                                            ###
