--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1107,6 +1107,17 @@ ParRepair=yes
 # issues. Please apply the patches to libpar2 and recompile it.
 ParScan=auto
 
+# Force par-rename (yes, no).
+#
+# Par-rename restores original file names using information stored
+# in par2-files. When enabled the par-rename is performed as a first
+# step of post-processing for every nzb-file having par2-files. When
+# disabled the par-rename is performed only if requested by unpacker.
+#
+# Par-rename is very fast and is highly recommended, especially if
+# unpack is disabled.
+ParRename=yes
+
 # What to do if download health goes down below critical health (pause,
 # delete, none).
 #
