addition to r794: removed mistakenly added pp-parameter "NZBPP_DELETED"; since post-processing is not performed for deleted downloads, this parameter has no use
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@801 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1317,9 +1317,8 @@ SevenZipCmd=7z
 #                           parameters or due to errors during par-check;
 #                       1 = unpack failed;
 #                       2 = unpack successful;
-#  NZBPP_DELETED      - indicates if nzb-file was deleted from queue (1);
 #  NZBPP_HEALTHDELETED - indicates if nzb-file was deleted by health
-#                       check (1); the parameter NZBPP_DELETED is also set to 1;
+#                       check (1);
 #  NZBPP_TOTALARTICLES - number of articles in nzb-file;
 #  NZBPP_SUCCESSARTICLES - number of successfully downloaded articles;
 #  NZBPP_FAILEDARTICLES - number of failed articles;
