new env-var "NZBPP_FINALDIR" passed to pp-scripts
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@803 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1293,6 +1293,7 @@ SevenZipCmd=7z
 #                       If download was renamed, this parameter reflects the new name;
 #  NZBPP_NZBFILENAME  - name of processed nzb-file. It includes file extension and also
 #                       may include full path;
+#  NZBPP_FINALDIR     - final destination path if set by one of previous pp-scripts;
 #  NZBPP_CATEGORY     - category assigned to nzb-file (can be empty string);
 #  NZBPP_HEALTH       - download health: an integer value in the range
 #                       from 0 (all articles failed) to 1000 (all articles
