pp-scripts can now set post-processing parameters by printing command "[NZB] NZBPR_varname=value"; this allows scripts which are executed sooner to pass data for scripts executed later
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@804 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1351,6 +1351,13 @@ SevenZipCmd=7z
 # by NZBGet):
 #   echo "[NZB] FINALDIR=/path/to/moved/files";
 #
+# To assign post-processing parameters:
+#   echo "[NZB] NZBPR_myvar=my value";
+#
+# The prefix "NZBPR_" will be removed. In this example a post-processing
+# parameter with name "myvar" and value "my value" will be associated
+# with nzb-file.
+#
 # Return value: NZBGet processes the exit code returned by the script:
 #  93 - post-process successful (status = SUCCESS);
 #  94 - post-process failed (status = FAILURE);
