addition to r807: corrected makefile
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@808 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.in
+++ b/Makefile.in
@@ -281,8 +281,7 @@ osx_FILES = \
 	osx/Resources/Images/statusicon@2x.png osx/Resources/Images/statusicon-inv.png \
 	osx/Resources/Images/statusicon-inv@2x.png osx/Resources/licenses/license-bootstrap.txt \
 	osx/Resources/licenses/license-jquery-GPL.txt osx/Resources/licenses/license-jquery-MIT.txt \
-	osx/Resources/licenses/license-nzbget.txt osx/Resources/Credits.rtf \
-	osx/Resources/Localizable.strings osx/Resources/Welcome.rtf
+	osx/Resources/Credits.rtf osx/Resources/Localizable.strings osx/Resources/Welcome.rtf
 
 doc_FILES = \
 	README ChangeLog COPYING
