improved smart duplicates: nzb-files now have field "DupeScore" which can be set from rss filter using command "Options"; items with higher duplicate scores are downloaded even if the history already has successfully downloaded item (with lower score); changed the syntax of rss filter command "Options" to allow use of more options (and easy add new options in the future); new options "DupeScore", "DupeKey" and "NoDupe" to fine tune duplicate handling; updated description of option "DupeCheck"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@813 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -457,20 +457,27 @@ NzbProcess=
 # "$NZBOP_APPBIN" -c "$NZBOP_CONFIGFILE" -E FR P "$NZBNA_NZBNAME/.*\.nzb";
 NzbAddedProcess=
 
-# Check for duplicate files (yes, no).
+# Check for duplicate titles (yes, no).
 #
 # If this option is enabled the program checks by adding of a new nzb-file:
-# 1) if nzb-file contains duplicate entries. This check aims on detecting
-#    of reposted files (if first file was not fully uploaded).
-#    If the program find two files with identical names, only the
-#    biggest of these files will be added to queue;
-# 2) if download queue already contains file with the same name;
-# 3) if destination file on disk already exists.
-# In last two cases: if the file exists it will not be added to queue.
+# 1) if history contains the same title (see below) with success status
+#    the nzb-file is not added to queue;
+# 2) if download queue already contains the same title the nzb-file is
+#    added to queue and both files are marked as duplicates to each other;
+# 3) if nzb-file contains duplicate entries. This check aims on detecting
+#    of reposted files (if first file was not fully uploaded). If the
+#    program finds two entries with identical names, only the
+#    biggest entry is added to queue;
 #
-# If this option is disabled, all files are downloaded and duplicate files
-# are renamed to "filename_duplicate1".
-# Existing files are never deleted or overwritten.
+# "Same title" means the nzb file name is same or the duplicate key is
+# same. Duplicate keys are set by fetching from RSS feeds using title
+# identifier fields provided by RSS provider (imdbid or rageid/season/episode).
+#
+# If duplicates were detected only one of them is downloaded. If download
+# fails another duplicate is tried. If download succeeds all remaining
+# duplicates are deleted from queue.
+#
+# NOTE: For more info on duplicates see http://nzbget.sourceforge.net/RSS.
 DupeCheck=yes
 
 
@@ -798,17 +805,28 @@ Category4.Name=Software
 #      can use comments to explain complex rules or to temporary disable
 #      rules for debugging.
 #
-# Options allow to set category, priority and a flag to add nzb-file in
-# paused state.
+# Options allow to set properties on nzb-file. It's a comma-separated
+# list of property names with their values.
 #
-# Definition of options:
-#  [category,] [priority,] [paused|unpaused]
+# Definition of an option:
+#  name:value
 #
-#  category - category name which must not be "paused", "unpaused" and
-#              must not start with a digit or plus/minus;
-#   priority - signed integer number;
-#   paused   - add nzb in paused state;
-#   unpaused - add nzb in unpaused state.
+# Options can be defined using long option names or short names:
+#  category (cat, c)  - set category name, value is a string;
+#  pause (p)          - add nzb in paused or unpaused state, possible
+#                       values are: "yes", "y", "no", "n";
+#  priority (pr, r)  - option value is a signed integer number;
+#  dupescore (ds, s) - set duplicate score, value is a signed integer number;
+#  dupekey (dk, k)   - add to duplicate key, value is a string;
+#  nodupe (nd, n)    - disable duplicate check for the item, possible
+#                       values are: "yes", "y", "no", "n".
+#
+# Examples of option definitions:
+#  Accept(category:my series, pause:yes, priority:100): my show 1080p;
+#  Options(c:my series, p:y, r:100): 1080p;
+#  Options(s:1000): 1080p;
+#  Options(k:1080p): 1080p;
+#  Options(nodupe:yes): BluRay.
 #
 # Rule-options override values set in feed-options.
 #
