improved duplicate check: when history item expires (as defined by option "KeepHistory") and the duplicate check is active (option "DupeCheck") the item is not completely deleted from history; instead the amount of stored data reduces to minimum required for duplicate check (about 150 bytes vs 2000 bytes for full history item); such old history items are not shown in web-interface by default (to avoid transferring of large amount of history items); new button "Old" in web-interface to show old history items; the items are marked with badge "DUP";
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@816 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -663,17 +663,18 @@ DeleteCleanupDisk=yes
 
 # Keep the history of downloaded nzb-files (days).
 #
-# Value "0" disables the history.
+# After download and post-processing items are added to history where
+# their status can be checked and they can be post-processed again if
+# neccessary.
 #
-# NOTE: When a collection having paused files is added to history all remaining
-# files are moved from download queue to a list of parked files. It holds files
-# which could be required later if the collection will be moved back to
-# download queue for downloading of remaining files. The parked files still
-# consume some amount of memory and disk space. If the collection was downloaded
-# and successfully par-checked or postprocessed it is recommended to discard the
-# unneeded parked files before adding the collection to history. For par2-files
-# that can be achieved with the option <ParCleanupQueue>.
-KeepHistory=7
+# After expiring of defined period:
+#  if option <DupeCheck> is active - the amount of data kept in history
+#    item is significantly reduced and only fields necessary for
+#    duplicate check remains. The item remains in the history (forever);
+#  if option <DupeCheck> is NOT active - the history item is removed.
+#
+# Value "0" disables the history.
+KeepHistory=30
 
 # Keep the history of outdated feed items (days).
 #
