rss filter command "Options" can now increase priority and dupe scrore using new option names "priority+" and "dupecore+"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@818 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -813,14 +813,16 @@ Category4.Name=Software
 #  name:value
 #
 # Options can be defined using long option names or short names:
-#  category (cat, c)  - set category name, value is a string;
-#  pause (p)          - add nzb in paused or unpaused state, possible
-#                       values are: "yes", "y", "no", "n";
-#  priority (pr, r)  - option value is a signed integer number;
-#  dupescore (ds, s) - set duplicate score, value is a signed integer number;
-#  dupekey (dk, k)   - add to duplicate key, value is a string;
-#  nodupe (nd, n)    - disable duplicate check for the item, possible
-#                       values are: "yes", "y", "no", "n".
+#  category (cat, c)    - set category name, value is a string;
+#  pause (p)            - add nzb in paused or unpaused state, possible
+#                         values are: "yes", "y", "no", "n";
+#  priority (pr, r)     - set priority, value is a signed integer number;
+#  priority+ (pr+, r+)  - increase priority, value is a signed integer number;
+#  dupescore (ds, s)    - set duplicate score, value is a signed integer number;
+#  dupescore+ (ds+, s+) - increase duplicate score, value is a signed integer number;
+#  dupekey (dk, k)      - add to duplicate key, value is a string;
+#  nodupe (nd, n)       - disable duplicate check for the item, possible
+#                         values are: "yes", "y", "no", "n".
 #
 # Examples of option definitions:
 #  Accept(category:my series, pause:yes, priority:100): my show 1080p;
