changed syntax of option "dupekey" of command "Option" in RSS filter: option "dupekey" now sets duplicate key (overrides existing key); option "dupekey+" adds to existing duplicate key
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@819 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -820,7 +820,8 @@ Category4.Name=Software
 #  priority+ (pr+, r+)  - increase priority, value is a signed integer number;
 #  dupescore (ds, s)    - set duplicate score, value is a signed integer number;
 #  dupescore+ (ds+, s+) - increase duplicate score, value is a signed integer number;
-#  dupekey (dk, k)      - add to duplicate key, value is a string;
+#  dupekey (dk, k)      - set duplicate key, value is a string;
+#  dupekey+ (dk+, k+)   - add to duplicate key, value is a string;
 #  nodupe (nd, n)       - disable duplicate check for the item, possible
 #                         values are: "yes", "y", "no", "n".
 #
@@ -828,7 +829,7 @@ Category4.Name=Software
 #  Accept(category:my series, pause:yes, priority:100): my show 1080p;
 #  Options(c:my series, p:y, r:100): 1080p;
 #  Options(s:1000): 1080p;
-#  Options(k:1080p): 1080p;
+#  Options(k+:1080p): 1080p;
 #  Options(nodupe:yes): BluRay.
 #
 # Rule-options override values set in feed-options.
