extended word/substring search in RSS feed filters with pattern character "#" which matches one digit
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@824 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -867,7 +867,9 @@ Category4.Name=Software
 # Only fields title, filename and age are always present. The availability of
 # other fields depend on rss feed provider.
 #
-# Text search (Command @) supports wildcard characters * and ?.
+# Text search (Command @) supports supports wildcard characters * (matches
+# any number of any characters), ? (matches any one character)
+# and # (matches one digit).
 # Text search is by default performed against words (word-search mode): the
 # field content is separated into words and then each word is checked
 # against pattern. If the search pattern starts and ends with * (star)
