source nzb-files are now deleted when download-item leaves queue and history (option "NzbCleanupDisk")
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@829 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -661,6 +661,13 @@ DiskSpace=250
 # <ReloadPostQueue> disabled).
 DeleteCleanupDisk=yes
 
+# Delete source nzb-file when it is not needed anymore (yes, no).
+#
+# Enable this option for automatic deletion of source nzb-file from
+# incoming directory when the program doesn't require it anymore (the
+# nzb-file has been deleted from queue and history).
+NzbCleanupDisk=yes
+
 # Keep the history of downloaded nzb-files (days).
 #
 # After download and post-processing items are added to history where
@@ -1198,12 +1205,6 @@ ParPauseQueue=no
 # Enable this option for automatic deletion of unneeded (paused) par-files
 # from download queue after successful check/repair.
 ParCleanupQueue=yes
-
-# Delete source nzb-file after successful check/repair (yes, no).
-#
-# Enable this option for automatic deletion of nzb-file from incoming directory
-# after successful check/repair.
-NzbCleanupDisk=yes
 
 # Files to delete after successful check/repair.
 #
