replaced parameter "NoDupeCheck (yes, no)" with "DupeMode (score, all, force)" when adding nzb-files to queue using RPC-methods "append" and "appendurl"; changed option "nodupe" to "dupemode" in RSS filter commands "Append" and "Options"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@836 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -822,22 +822,22 @@ Category4.Name=Software
 # Options can be defined using long option names or short names:
 #  category (cat, c)    - set category name, value is a string;
 #  pause (p)            - add nzb in paused or unpaused state, possible
-#                         values are: "yes", "y", "no", "n";
+#                         values are: yes (y), no (n);
 #  priority (pr, r)     - set priority, value is a signed integer number;
 #  priority+ (pr+, r+)  - increase priority, value is a signed integer number;
 #  dupescore (ds, s)    - set duplicate score, value is a signed integer number;
 #  dupescore+ (ds+, s+) - increase duplicate score, value is a signed integer number;
 #  dupekey (dk, k)      - set duplicate key, value is a string;
 #  dupekey+ (dk+, k+)   - add to duplicate key, value is a string;
-#  nodupe (nd, n)       - disable duplicate check for the item, possible
-#                         values are: "yes", "y", "no", "n".
+#  dupemode (dm, m)     - set duplicate check mode, possible values
+#                         are: score (s), all (a), force (f).
 #
 # Examples of option definitions:
 #  Accept(category:my series, pause:yes, priority:100): my show 1080p;
 #  Options(c:my series, p:y, r:100): 1080p;
 #  Options(s:1000): 1080p;
 #  Options(k+:1080p): 1080p;
-#  Options(nodupe:yes): BluRay.
+#  Options(dupemode:force): BluRay.
 #
 # Rule-options override values set in feed-options.
 #
