--- a/Makefile.in
+++ b/Makefile.in
@@ -85,12 +85,12 @@ PROGRAMS = $(bin_PROGRAMS)
 am_nzbget_OBJECTS = ArticleDownloader.$(OBJEXT) BinRpc.$(OBJEXT) \
 	ColoredFrontend.$(OBJEXT) Connection.$(OBJEXT) \
 	Decoder.$(OBJEXT) DiskState.$(OBJEXT) DownloadInfo.$(OBJEXT) \
-	Frontend.$(OBJEXT) FeedCoordinator.$(OBJEXT) \
-	FeedFile.$(OBJEXT) FeedFilter.$(OBJEXT) Log.$(OBJEXT) \
-	LoggableFrontend.$(OBJEXT) NCursesFrontend.$(OBJEXT) \
-	NNTPConnection.$(OBJEXT) NZBFile.$(OBJEXT) \
-	NewsServer.$(OBJEXT) Observer.$(OBJEXT) Options.$(OBJEXT) \
-	ParChecker.$(OBJEXT) ParRenamer.$(OBJEXT) \
+	DupeCoordinator.$(OBJEXT) Frontend.$(OBJEXT) \
+	FeedCoordinator.$(OBJEXT) FeedFile.$(OBJEXT) \
+	FeedFilter.$(OBJEXT) Log.$(OBJEXT) LoggableFrontend.$(OBJEXT) \
+	NCursesFrontend.$(OBJEXT) NNTPConnection.$(OBJEXT) \
+	NZBFile.$(OBJEXT) NewsServer.$(OBJEXT) Observer.$(OBJEXT) \
+	Options.$(OBJEXT) ParChecker.$(OBJEXT) ParRenamer.$(OBJEXT) \
 	ParCoordinator.$(OBJEXT) PrePostProcessor.$(OBJEXT) \
 	QueueCoordinator.$(OBJEXT) QueueEditor.$(OBJEXT) \
 	RemoteClient.$(OBJEXT) RemoteServer.$(OBJEXT) \
@@ -244,9 +244,9 @@ target_vendor = @target_vendor@
 nzbget_SOURCES = \
 	ArticleDownloader.cpp ArticleDownloader.h BinRpc.cpp BinRpc.h \
 	ColoredFrontend.cpp ColoredFrontend.h Connection.cpp Connection.h Decoder.cpp Decoder.h \
-	DiskState.cpp DiskState.h DownloadInfo.cpp DownloadInfo.h Frontend.cpp Frontend.h \
-	FeedCoordinator.cpp FeedCoordinator.h FeedFile.cpp FeedFile.h FeedFilter.cpp FeedFilter.h \
-	Log.cpp Log.h LoggableFrontend.cpp LoggableFrontend.h MessageBase.h \
+	DiskState.cpp DiskState.h DownloadInfo.cpp DownloadInfo.h DupeCoordinator.cpp DupeCoordinator.h \
+	Frontend.cpp Frontend.h FeedCoordinator.cpp FeedCoordinator.h FeedFile.cpp FeedFile.h \
+	FeedFilter.cpp FeedFilter.h Log.cpp Log.h LoggableFrontend.cpp LoggableFrontend.h MessageBase.h \
 	NCursesFrontend.cpp NCursesFrontend.h NNTPConnection.cpp NNTPConnection.h NZBFile.cpp \
 	NZBFile.h NewsServer.cpp NewsServer.h Observer.cpp \
 	Observer.h Options.cpp Options.h ParChecker.cpp ParChecker.h ParRenamer.cpp ParRenamer.h \
@@ -458,6 +458,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Decoder.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/DiskState.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/DownloadInfo.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/DupeCoordinator.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/FeedCoordinator.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/FeedFile.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/FeedFilter.Po@am__quote@
