added new search fields to RSS feed filter: imdbid, priority, dupekey and dupescore
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@845 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -868,8 +868,9 @@ Category4.Name=Software
 #  param   - parameter for command.
 #
 # Commands @ and $ are for use with text fields (title, filename, category,
-# link, genre). Commands =, <, <=, > and >= are for use with numeric
-# fields (size, age, rating, rageid, season, episode).
+# link, genre, dupekey). Commands =, <, <=, > and >= are for use with numeric
+# fields (size, age, rating, imdbid, rageid, season, episode, priority,
+# dupescore).
 #
 # Only fields title, filename and age are always present. The availability of
 # other fields depend on rss feed provider.
