1) refactor: moved feed related classes from unit "DownloadInfo" to new unit "FeedInfo"; 2) rss filter fields "season" and "episode" are now available for all feeds (not restricted to newznab); if the feed does not have the fields, they are automatically parsed from feed title; 3) fields "season" and "episode" can now be used as substitution variables in option "dupekey" of rss filter command "Options"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@846 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.in
+++ b/Makefile.in
@@ -87,10 +87,11 @@ am_nzbget_OBJECTS = ArticleDownloader.$(OBJEXT) BinRpc.$(OBJEXT) \
 	Decoder.$(OBJEXT) DiskState.$(OBJEXT) DownloadInfo.$(OBJEXT) \
 	DupeCoordinator.$(OBJEXT) Frontend.$(OBJEXT) \
 	FeedCoordinator.$(OBJEXT) FeedFile.$(OBJEXT) \
-	FeedFilter.$(OBJEXT) Log.$(OBJEXT) LoggableFrontend.$(OBJEXT) \
-	NCursesFrontend.$(OBJEXT) NNTPConnection.$(OBJEXT) \
-	NZBFile.$(OBJEXT) NewsServer.$(OBJEXT) Observer.$(OBJEXT) \
-	Options.$(OBJEXT) ParChecker.$(OBJEXT) ParRenamer.$(OBJEXT) \
+	FeedFilter.$(OBJEXT) FeedInfo.$(OBJEXT) Log.$(OBJEXT) \
+	LoggableFrontend.$(OBJEXT) NCursesFrontend.$(OBJEXT) \
+	NNTPConnection.$(OBJEXT) NZBFile.$(OBJEXT) \
+	NewsServer.$(OBJEXT) Observer.$(OBJEXT) Options.$(OBJEXT) \
+	ParChecker.$(OBJEXT) ParRenamer.$(OBJEXT) \
 	ParCoordinator.$(OBJEXT) PrePostProcessor.$(OBJEXT) \
 	QueueCoordinator.$(OBJEXT) QueueEditor.$(OBJEXT) \
 	RemoteClient.$(OBJEXT) RemoteServer.$(OBJEXT) \
@@ -246,9 +247,9 @@ nzbget_SOURCES = \
 	ColoredFrontend.cpp ColoredFrontend.h Connection.cpp Connection.h Decoder.cpp Decoder.h \
 	DiskState.cpp DiskState.h DownloadInfo.cpp DownloadInfo.h DupeCoordinator.cpp DupeCoordinator.h \
 	Frontend.cpp Frontend.h FeedCoordinator.cpp FeedCoordinator.h FeedFile.cpp FeedFile.h \
-	FeedFilter.cpp FeedFilter.h Log.cpp Log.h LoggableFrontend.cpp LoggableFrontend.h MessageBase.h \
-	NCursesFrontend.cpp NCursesFrontend.h NNTPConnection.cpp NNTPConnection.h NZBFile.cpp \
-	NZBFile.h NewsServer.cpp NewsServer.h Observer.cpp \
+	FeedFilter.cpp FeedFilter.h FeedInfo.cpp FeedInfo.h Log.cpp Log.h LoggableFrontend.cpp \
+	LoggableFrontend.h MessageBase.h NCursesFrontend.cpp NCursesFrontend.h NNTPConnection.cpp \
+	NNTPConnection.h NZBFile.cpp NZBFile.h NewsServer.cpp NewsServer.h Observer.cpp \
 	Observer.h Options.cpp Options.h ParChecker.cpp ParChecker.h ParRenamer.cpp ParRenamer.h \
 	ParCoordinator.cpp ParCoordinator.h PrePostProcessor.cpp PrePostProcessor.h QueueCoordinator.cpp \
 	QueueCoordinator.h QueueEditor.cpp QueueEditor.h RemoteClient.cpp RemoteClient.h \
@@ -462,6 +463,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/FeedCoordinator.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/FeedFile.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/FeedFilter.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/FeedInfo.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Frontend.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Log.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/LoggableFrontend.Po@am__quote@
