added two new item-options for RSS filter rules "Accept" and "Options": option "rageid" generates duplicate key using custom rageid and season/episode numbers; option "series" generates duplicate key using custom series name (any unique string) and season/episode numbers
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@857 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -830,7 +830,11 @@ Category4.Name=Software
 #  dupekey (dk, k)      - set duplicate key, value is a string;
 #  dupekey+ (dk+, k+)   - add to duplicate key, value is a string;
 #  dupemode (dm, m)     - set duplicate check mode, possible values
-#                         are: score (s), all (a), force (f).
+#                         are: score (s), all (a), force (f);
+#  rageid				- generate duplicate key using this rageid
+#                         (integer number) and season/episode numbers;
+#  series				- generate duplicate key using series identifier
+#                         (any unique string) and season/episode numbers.
 #
 # Examples of option definitions:
 #  Accept(category:my series, pause:yes, priority:100): my show 1080p;
