--- a/nzbget.conf
+++ b/nzbget.conf
@@ -710,6 +710,12 @@ FeedHistory=7
 # used for this purpose, when multiple URLs were added at the same time.
 UrlConnections=4
 
+# Force URL-downloads even if download queue is paused (yes, no).
+#
+# If option is active the URL-downloads (such as appending of nzb-files
+# via URL or fetching of RSS feeds and nzb-files from feeds) are performed
+# even if download is in paused state.
+UrlForce=yes
 
 ##############################################################################
 ### CATEGORIES                                                             ###
