option "HealthCheck" is now set to "Delete" by default; the previously default setting "Pause" did not work well with automatic duplicate handling
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@864 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -463,11 +463,9 @@ NzbAddedProcess=
 # 1) if history contains the same title (see below) with success status
 #    the nzb-file is not added to queue;
 # 2) if download queue already contains the same title the nzb-file is
-#    added to queue and both files are marked as duplicates to each other;
-# 3) if nzb-file contains duplicate entries. This check aims on detecting
-#    of reposted files (if first file was not fully uploaded). If the
-#    program finds two entries with identical names, only the
-#    biggest entry is added to queue;
+#    added to queue for backup (if firt file fails);
+# 3) if nzb-file contains duplicate entries. This helps to find errors
+#    in bad nzb-files.
 #
 # "Same title" means the nzb file name is same or the duplicate key is
 # same. Duplicate keys are set by fetching from RSS feeds using title
@@ -476,6 +474,10 @@ NzbAddedProcess=
 # If duplicates were detected only one of them is downloaded. If download
 # fails another duplicate is tried. If download succeeds all remaining
 # duplicates are deleted from queue.
+#
+# NOTE: for automatic duplicate handling option <HealthCheck> must be
+# set to "Delete" or "None". If it is set to "Pause" you will need to
+# manually unpause another duplicate (if any exists in queue).
 #
 # NOTE: For more info on duplicates see http://nzbget.sourceforge.net/RSS.
 DupeCheck=yes
@@ -1149,13 +1151,18 @@ ParScan=auto
 # unpack is disabled.
 ParRename=yes
 
-# What to do if download health goes down below critical health (pause,
-# delete, none).
+# What to do if download health goes down below critical health (delete,
+# pause, none).
 #
+#  Delete - delete nzb-file from queue. If option <DeleteCleanupDisk>
+#           is active the already downloaded files will be deleted too;
 #  Pause  - pause nzb-file;
-#  Delete - delete nzb-file from queue;
 #  None   - do nothing (continue download).
-HealthCheck=pause
+#
+# NOTE: for automatic duplicate handling option must be set to "Delete"
+# or "None". If it is set to "Pause" you will need to manually unpause
+# another duplicate (if any exists in queue). See also option <DupeCheck>.
+HealthCheck=delete
 
 # Use only par2-files with matching names (yes, no).
 #
