history records can now be either permanently deleted or just hidden from history list; hiding (instead of deleting) is recommended for proper work of duplicate handling; in addition it is now possible to delete downloaded files; RPC-method "editqueue" has now four actions to delete history records: "HistoryDelete", "HistoryDeleteCleanup", "HistoryFinalDelete", "HistoryFinalDeleteCleanup"; action "HistoryDelete" which has existed before now hides records, already hidden records are ignored; button "Old" in web-interface on history tab renamed to "Hidden"; badge "DUP", used to distinguish old history records changed to "hidden"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@868 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -672,17 +672,20 @@ NzbCleanupDisk=yes
 
 # Keep the history of downloaded nzb-files (days).
 #
-# After download and post-processing items are added to history where
+# After download and post-processing the items are added to history where
 # their status can be checked and they can be post-processed again if
 # neccessary.
 #
 # After expiring of defined period:
-#  if option <DupeCheck> is active - the amount of data kept in history
-#    item is significantly reduced and only fields necessary for
-#    duplicate check remains. The item remains in the history (forever);
-#  if option <DupeCheck> is NOT active - the history item is removed.
 #
-# Value "0" disables the history.
+# If option <DupeCheck> is active the items become hidden and the amount
+# of data kept is significantly reduced (for better performance), only
+# fields necessary for duplicate check are kept. The item remain in the
+# hidden history (forever);
+#
+# If option <DupeCheck> is NOT active the items are removed from history.
+#
+# Value "0" disables history. Duplicate check will not work.
 KeepHistory=30
 
 # Keep the history of outdated feed items (days).
