removed option "Also delete downloaded files" from history delete confirmation dialog; for failed downloads cleanup is now performed if option "DeleteCleanupDisk" is active; in RPC-Method "editqueue" removed actions "HistoryDeleteCleanup" and "HistoryFinalDeleteCleanup"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@871 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -653,14 +653,13 @@ WriteBufferSize=0
 # The drive with <TempDir> is not checked.
 DiskSpace=250
 
-# Delete already downloaded files from disk, if the download of nzb-file was
-# cancelled (nzb-file was deleted from queue) (yes, no).
+# Delete already downloaded files from disk when nzb-file is deleted
+# (yes, no).
 #
-# NOTE: NZBGet does not delete files in a case if all remaining files in
-# queue are par-files. That prevents the accidental deletion if the option
-# <ParCleanupQueue> is disabled or if the program was interrupted during
-# parcheck and later restarted without reloading of post queue (option
-# <ReloadPostQueue> disabled).
+# This option defines if downloaded files must be deleted when:
+# 1) download of nzb-file is cancelled (deleted from queue);
+# 2) history record with failure-status (par-failure or unpack-failure)
+# is deleted from history.
 DeleteCleanupDisk=yes
 
 # Delete source nzb-file when it is not needed anymore (yes, no).
