updated descriptions of few options
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@872 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -21,8 +21,8 @@
 
 # Root directory for all tasks.
 #
-# On POSIX you can use "~" as alias for home directory (e.g. "~/download").
-# On Windows use absolute paths (e.g. "C:\Download").
+# On POSIX you can use "~" as alias for home directory (e.g. "~/downloads").
+# On Windows use absolute paths (e.g. "C:\Downloads").
 MainDir=~/downloads
 
 # Destination directory for downloaded files.
@@ -48,14 +48,22 @@ DestDir=${MainDir}/dst
 # files are put directly to destination directory (option <DestDir>).
 InterDir=
 
-# Directory to monitor for incoming nzb-jobs.
+# Directory for incoming nzb-files.
 #
-# Can have subdirectories.
-# A nzb-file queued from a subdirectory will be automatically assigned to
-# category with the directory-name.
+# If a new nzb-file is added to queue via web-interface or RPC-API, it
+# is saved into this directory and then processed by pre-processing
+# script (option <NzbProcess>).
+#
+# This directory is also monitored for new nzb-files. If a new file
+# is found it is added to download queue. The directory can have
+# sub-directories. A nzb-file queued from a subdirectory is automatically
+# assigned to category with sub-directory-name.
 NzbDir=${MainDir}/nzb
 
-# Directory to store download queue.
+# Directory to store program state.
+#
+# This directory is used to save download queue, history, information
+# about fetched RSS feeds, statistics, etc.
 QueueDir=${MainDir}/queue
 
 # Directory to store temporary files.
