option "DiskSpace" now checks space on "InterDir" in addition to "DestDir"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@880 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -609,8 +609,9 @@ TerminateTimeout=600
 
 # Set the maximum download rate on program start (kilobytes/sec).
 #
-# Value "0" means no speed control.
 # The download rate can be changed later via remote calls.
+#
+# Value "0" means no speed control.
 DownloadRate=0
 
 # Accurate speed rate calculation (yes, no).
@@ -656,9 +657,10 @@ WriteBufferSize=0
 
 # Pause if disk space gets below this value (megabytes).
 #
+# Disk space is checked for directories pointed by option <DestDir> and
+# option <InterDir>.
+#
 # Value "0" disables the check.
-# Only the disk space on the drive with <DestDir> is checked.
-# The drive with <TempDir> is not checked.
 DiskSpace=250
 
 # Delete already downloaded files from disk when nzb-file is deleted
@@ -1194,8 +1196,6 @@ StrictParName=yes
 
 # Maximum allowed time for par-repair (minutes).
 #
-# Value "0" means unlimited.
-#
 # If you use NZBGet on a very slow computer like NAS-device, it may be good to
 # limit the time allowed for par-repair. NZBGet calculates the estimated time
 # required for par-repair. If the estimated value exceeds the limit defined
@@ -1206,6 +1206,8 @@ StrictParName=yes
 # estimated time is more or less accurate. But in a case if <ParTimeLimit> is
 # set to a value smaller than 5 minutes, the comparison is made after the first
 # whole minute.
+#
+# Value "0" means unlimited.
 #
 # NOTE: The option limits only the time required for repairing. It doesn't
 # affect the first stage of parcheck - verification of files. However the
